# bawosc

./: README.md  pyproject.toml
examples/: baw_envelope_demo.py  test_package.ipynb
src/bawosc/: __init__.py
src/bawosc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bawosc/models/: baw_mode.py  driven_oscillator.py
src/bawosc/plotting/: infobox.py
src/bawosc/signals/: chirps.py
tests/: test_green_vs_ode.py
